# pyz3r

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  MIGRATION_GUIDE.md  README.md  async_patcher_libtest.py  async_patcher_libtest_smz3.py  customizer_lib_test.py  patcher.py  patcher_libtest.py  patcher_libtest_2.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  smvariatest.py  test.py
.github/workflows/: codeql-analysis.yml
pyz3r/: __init__.py  __main__.py  alttpr.py  async_alttpr.py  async_http.py  async_rom.py  customizer.py  exceptions.py  http.py  misc.py  mystery.py  patch.py  rom.py  sm.py  smvaria.py  smz3.py  spoiler.py  srm.py
pyz3r/ext/: priestmode.py
src/pyz3r/: __init__.py
tests/: README.md  conftest.py  test_alttpr.py  test_customizer.py  test_exceptions.py  test_misc.py  test_mystery.py  test_rom.py
